--- a/index.html
+++ b/index.html
@@ -13,11 +13,27 @@ You can only have one item
 with the same id at the same HTML page
 -->
 
-
 <div class="grid-container">
-  <div class="box" id="header">HEADER HEADER HEADER HEADER HEADER HEADER </div>
+  <div class="box" id="header">
+    <ul id="menu">
+      <li> <a href="#">Home</a> </li>
+      <li> <a href="#">Partidos</a> </li>
+      <li> <a href="#">Memes</a> </li>
+      <li> <a href="#">Puig</a> </li>
+    </ul>
+
+  </div>
   <div class="box" id="right">
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div id="card">
+      <img src="images/pozi.jpg"/>
+      <p>Hola me llamo pozi!</p>
+      <p>
+        <a href="#">twitter</a>
+        <a href="#">facebook</a>
+      </p>
+    </div>
+
+
   </div>
   <div class="box" id="content">
     <h1>Institut Puig Castellar</h1>
@@ -26,7 +42,9 @@ with the same id at the same HTML page
       <img id="main-image" src="images/puig.jpeg" alt="Institut Puig Castellar" />
     </div>
   </div>
-  <div class="box" id="footer">FOOTER</div>
+  <div class="box" id="footer">
+    Institut Puig Castellar ©
+  </div>
 </div>
 
 </body>
